day3/lab10-dev/manifests/stg/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo-blue-ing
  namespace: ci-bg-stuXX # 🐳  Change this 
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: blue.app.stuXX.steven.asia # 🐳  Change this 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: podinfo-green
                port:
                  number: 80
